# options-trader-rs

./: .gitignore  Cargo.toml  README.md
src/: account.rs  db_client.rs  main.rs  mktdata.rs  orders.rs  positions.rs  settings.rs  strategies.rs
src/connectivity/: errors.rs  http_client.rs  mod.rs  sessions.rs  web_client.rs  web_socket.rs
src/platform/: account.rs  db_client.rs  mktdata.rs  mod.rs  orders.rs  positions.rs  settings.rs
src/strategy/: generic.rs  mod.rs  monitor.rs  spx.rs
src/tt_api/: account.rs  mkt_data.rs  mktdata.rs  mod.rs  orders.rs  positions.rs  sessions.rs
src/utils/: mock_db.rs  mod.rs  ws_server.rs
src/web_client/: errors.rs  http_client.rs  mod.rs  sessions.rs  tt_api.rs  websocket.rs
