[package]
name = "options-trader"
version = "0.1.0"
edition = "2021"
author = "chris lawrence"
about = "options risk management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.30.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio-util = "0.7.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
url = "2.4.0"
crossbeam-channel = "0.5"
ezsockets = { version = "0.6.1", features = ["tokio-rustls"] }
num-decimal = { version = "0.2.5", default-features = false, features = [
    "num-v04",
    "serde",
] }
rustls = { version = "0.22.1", features = ["tls12"] }
tokio-rustls = "0.25.0"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
tracing = "0.1.37"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "runtime-tokio",
    "postgres",
    "sqlx-postgres",
    "bigdecimal",
    "uuid",
] }
clap = { version = "4.3.21", features = ["derive"] }
anyhow = "1.0.72"
exitcode = "1.1.2"
async-trait = "0.1.76"
webpki-roots = "0.26.0"
websocket-util = { version = "0.12.0" }
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"
chrono = "0.4"
futures-util = "0.3.30"
futures = "0.3.30"
tungstenite = "0.21.0"

# futures = "0.3.29"# websocket-util = "0.12.0"
# futures-channel = "0.3.29"
# futures-util = "0.3.29"

[dev-dependencies]
tokio-test = "0.4.3"
mockito = "1.2.0"
