[package]
name = "options-trader"
version = "0.1.0"
edition = "2021"
author = "chris lawrence"
about = "options risk management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.30.0", features = [
    "full",
    "macros",
    "rt",
    "signal",
    "tracing",
] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio-util = "0.7.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
url = "2.4.0"
num-decimal = { version = "0.2.5", default-features = false, features = [
    "num-v04",
    "serde",
] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
tracing = "0.1.37"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "runtime-tokio",
    "postgres",
    "sqlx-postgres",
    "bigdecimal",
    "uuid",
] }
clap = { version = "4.3.21", features = ["derive"] }
anyhow = "1.0.72"
exitcode = "1.1.2"
native-tls = "0.2.11"
chrono = "0.4"
futures-util = "0.3.29"

[dev-dependencies]
tokio-test = "0.4.3"
mockito = "1.2.0"
